[tool.poetry]
name = "repl_python3_Streamingstatus-4"
version = "0.1.0"
description = ""
authors = ["Aditya696969 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pytz = "^2021.1"
discord = "^1.7.3"
requests = "^2.27.1"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
